# city_api

./: .env  .gitignore  .ruff.toml  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
app/: config.py  ioc.py  main.py
app/application/: errors.py
app/application/commands/: city.py  district.py  region.py
app/application/dto/: city.py  district.py  region.py
app/application/interactors/: city.py  district.py  region.py
app/application/interface/: uuid_generator.py
app/application/interface/city/: city.py
app/application/interface/district/: district.py
app/application/interface/region/: region.py
app/domain/entities/: city.py  district.py  region.py
app/infrastructure/db/: main.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/models/: __init__.py  base.py  city.py  district.py  region.py
app/infrastructure/gateway/: city.py  district.py  region.py
app/infrastructure/grpc/city/: city.proto  city_pb2.py  city_pb2.pyi  city_pb2_grpc.py
app/infrastructure/grpc/district/: district.proto  district_pb2.py  district_pb2.pyi  district_pb2_grpc.py
app/infrastructure/grpc/region/: region.proto  (+3 more)
app/presentation/api/: city.py  district.py  region.py
app/presentation/grpc/: city.py  district.py  region.py
app/presentation/schemas/: city.py  district.py  region.py
tests/: conftest.py
tests/city/: application_test.py  http_test.py  infrastructure_test.py
tests/district/: application_test.py  http_test.py  infrastructure_test.py
tests/region/: application_test.py  http_test.py  infrastructure_test.py
(+2 files in other folders)
